--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
@@ -8,7 +8,9 @@ upstream lms-backend {
     {% for host in nginx_lms_gunicorn_hosts %}
         server {{ host }}:{{ edxapp_lms_gunicorn_port }} fail_timeout=0;
     {% endfor %}
-
+    {% if EDXAPP_AWS_BACKUP_ENABLE %}
+        server localhost:8001 backup;
+    {% endif %}
 }
 
 {%- if EDXAPP_ENABLE_RATE_LIMITING -%}
