--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
@@ -42,6 +42,14 @@ geo $http_x_forwarded_for $embargo {
 {%- endif %}
 
 server {
+
+  error_page 503 /maintenance.html;
+  location = /maintenance.html{root /edx/var/maintenance/;}
+
+  location ~ /maintenance_files/(?P<file>.*) {
+    root /edx/var/maintenance/;
+  }
+
   # LMS configuration file for nginx, templated by ansible
 
   {% if NGINX_EDXAPP_ENABLE_S3_MAINTENANCE %}
@@ -105,6 +113,13 @@ error_page {{ k }} {{ v }};
   rewrite ^(.*)/favicon.ico$ /static/images/favicon.ico last;
 
   location @proxy_to_lms_app {
+    set $mte open;
+    set $action open;
+    if (-f /edx/var/maintenance/maintenance.file){set $mte close;}
+    if ($remote_addr != 82.117.232.99){set $action "${mte}close";}
+    if ($remote_addr = 127.0.0.1){set $action "${mte}open";}
+    if ($action = closeclose){return 503;}
+
     {% if NGINX_SET_X_FORWARDED_HEADERS %}
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Port $server_port;
