--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
@@ -80,7 +80,7 @@ error_page {{ k }} {{ v }};
 
   if ($do_redirect_to_https = "true")
   {
-  rewrite ^ https://$host$request_uri? permanent;
+  rewrite ^ https://$host/$request_uri? permanent;
   }
   {% endif %}
   
