--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
@@ -16,7 +16,7 @@ upstream lms-backend {
 server {
   listen 80;
   server_name university-sandbox.*;
-  rewrite ^/(.*)$ https://$host$1 permanent;
+  rewrite ^/(.*)$ https://$host/$1 permanent;
 }
 
 
