fix server rewrite url

--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
@@ -16,7 +16,7 @@ upstream cms-backend {
 server {
   listen 80;
   server_name studio-sandbox.*;
-  rewrite ^/(.*)$ https://$host$1 permanent;
+  rewrite ^/(.*)$ https://$host/$1 permanent;
 }
 
 
