--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
@@ -38,11 +38,10 @@ error_page {{ k }} {{ v }};
 
   listen {{ EDXAPP_CMS_NGINX_PORT }} {{ default_site }};
 
-  ssl on;
-  ssl_certificate        /etc/nginx/ssl/cms_o365edu_com_ua.crt;
-  ssl_certificate_key    /etc/nginx/ssl/cms.o365edu.com.ua.key;
-
   {% if NGINX_ENABLE_SSL %}
+  ssl on;
+  ssl_certificate        /etc/nginx/ssl/cms.crt;
+  ssl_certificate_key    /etc/nginx/ssl/cms.key;
 
   listen {{ EDXAPP_CMS_SSL_NGINX_PORT }} ssl;
 
