--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
@@ -1,84 +1,25 @@
-{%- if "cms" in nginx_default_sites -%}
-  {%- set default_site = "default" -%}
-{%- else -%}
-  {%- set default_site = "" -%}
-{%- endif -%}
-
 upstream cms-backend {
-    {% for host in nginx_cms_gunicorn_hosts %}
-        server {{ host }}:{{ edxapp_cms_gunicorn_port }} fail_timeout=0;
-    {% endfor %}
-}
-
-server {
-  listen 0.0.0.0:80;
-  server_name ~^((stage|prod)-)?(studio|cms).*;
-  {% if NGINX_ENABLE_SSL %}
-  rewrite ^/(.*)$ https://studio.zsmu.edu.ua/$1 permanent;
-  {% else %}
-  rewrite ^/(.*)$ http://studio.zsmu.edu.ua/$1 permanent;
-  {% endif %}
-}
+            server 127.0.0.1:8010 fail_timeout=0;
+        }
 
 server {
   # CMS configuration file for nginx, templated by ansible
       
   # Proxy to a remote maintanence page
-  {% if NGINX_EDXAPP_ENABLE_S3_MAINTENANCE %}
-
-  # Do not include a 502 error in NGINX_ERROR_PAGES when 
-  # NGINX_EDXAPP_ENABLE_S3_MAINTENANCE is enabled.
-
-  error_page 502 @maintenance;
-
-    {% include "s3_maintenance.j2" %}
   
-  {% endif %}
-
   # error pages
-  {% for k, v in NGINX_EDXAPP_ERROR_PAGES.iteritems() %}
-error_page {{ k }} {{ v }};
-  {% endfor %}
-
-  listen {{ EDXAPP_CMS_NGINX_PORT }} {{ default_site }};
-
-  {% if NGINX_ENABLE_SSL %}
-  ssl on;
-  ssl_certificate        /etc/nginx/ssl/cms.crt;
-  ssl_certificate_key    /etc/nginx/ssl/cms.key;
-
-  listen {{ EDXAPP_CMS_SSL_NGINX_PORT }} ssl;
-
-  ssl_certificate /etc/ssl/certs/{{ NGINX_SSL_CERTIFICATE|basename }};
-  ssl_certificate_key /etc/ssl/private/{{ NGINX_SSL_KEY|basename }};
-  # request the browser to use SSL for all connections
-  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
-  {% endif %}
+  error_page 504 /server/server-error.html;
+  error_page 502 /server/server-error.html;
+  error_page 500 /server/server-error.html;
   
-  {% if NGINX_REDIRECT_TO_HTTPS %}
-  # Redirect http to https over single instance
-  if ($scheme != "https") 
-  { 
-   set $do_redirect_to_https "true";
-  }
+  listen 80 ;
 
-  # Nginx does not support nested conditions 
-  # Forward to HTTPS if we're an HTTP request... and the server is behind ELB 
-  if ($http_x_forwarded_proto = "http") 
-  {
-   set $do_redirect_to_https "true";
-  }
+    
+    
+  server_name ~^((stage|prod)-)?studio.*;
 
-  if ($do_redirect_to_https = "true")
-  {
-  rewrite ^ https://$host$request_uri? permanent;
-  }
-  {% endif %}
-  
-  server_name cms.*;
-
-  access_log {{ nginx_log_dir }}/access.log {{ NGINX_LOG_FORMAT_NAME }};
-  error_log {{ nginx_log_dir }}/error.log error;
+  access_log /edx/var/log/nginx/access.log p_combined;
+  error_log /edx/var/log/nginx/error.log error;
 
   # CS184 requires uploads of up to 4MB for submitting screenshots. 
   # CMS requires larger value for course assest, values provided 
@@ -89,24 +30,17 @@ error_page {{ k }} {{ v }};
 
 
   location @proxy_to_cms_app {
-    {% if NGINX_SET_X_FORWARDED_HEADERS %}
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Port $server_port;
-    proxy_set_header X-Forwarded-For $remote_addr;
-    {% else %}
-    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
     proxy_set_header X-Forwarded-Port $http_x_forwarded_port;
     proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-    {% endif %}
-    proxy_set_header Host $http_host;
+        proxy_set_header Host $http_host;
 
     proxy_redirect off;
     proxy_pass http://cms-backend;
   }
 
   location / {
-    {% include "basic-auth.j2" %}
-    try_files $uri @proxy_to_cms_app;
+        try_files $uri @proxy_to_cms_app;
   }
 
   # No basic auth security on the github_service_hook url, so that github can use it for cms
@@ -119,7 +53,49 @@ error_page {{ k }} {{ v }};
     try_files $uri @proxy_to_cms_app;
   }
 
-  {% include "robots.j2" %}
-  {% include "static-files.j2" %}
+      # static pages for server status
+  location ~ ^/server/(?P<file>.*) {
+      root /edx/var/nginx/server-static;
+      try_files /$file =404;
+  }
+
+  location ~ ^/static/(?P<file>.*) {
+    root /edx/var/edxapp;
+    try_files /staticfiles/$file /course_static/$file =404;
+
+    # return a 403 for static files that shouldn't be
+    # in the staticfiles directory
+    location ~ ^/static/(?:.*)(?:\.xml|\.json|README.TXT) {
+        return 403;
+    }
+
+    # http://www.red-team-design.com/firefox-doesnt-allow-cross-domain-fonts-by-default
+    location ~ "/static/(?P<collected>.*\.[0-9a-f]{12}\.(eot|otf|ttf|woff|woff2)$)" {
+        expires max;
+        add_header Access-Control-Allow-Origin *;
+        try_files /staticfiles/$collected /course_static/$collected =404;
+    }
+
+    # Set django-pipelined files to maximum cache time
+    location ~ "/static/(?P<collected>.*\.[0-9a-f]{12}\..*)" {
+        expires max;
+        # Without this try_files, files that have been run through
+        # django-pipeline return 404s
+        try_files /staticfiles/$collected /course_static/$collected =404;
+    }
+
+    # Set django-pipelined files for studio to maximum cache time
+    location ~ "/static/(?P<collected>[0-9a-f]{7}/.*)" {
+        expires max;
+
+        # Without this try_files, files that have been run through
+        # django-pipeline return 404s
+        try_files /staticfiles/$collected /course_static/$collected =404;
+    }
+
+    # Expire other static files immediately (there should be very few / none of these)
+    expires epoch;
+  }
+
 
 }
