--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
@@ -1,144 +1,45 @@
-{%- if "lms" in nginx_default_sites -%}
-  {%- set default_site = "default" -%}
-{%- else -%}
-  {%- set default_site = "" -%}
-{%- endif -%}
-
 upstream lms-backend {
-    {% for host in nginx_lms_gunicorn_hosts %}
-        server {{ host }}:{{ edxapp_lms_gunicorn_port }} fail_timeout=0;
-    {% endfor %}
+            server 127.0.0.1:8000 fail_timeout=0;
+        }
 
-}
-
-server {
-  listen 0.0.0.0:80;
-  server_name ~^((stage|prod)-)?(courses|lms).*;
-  {% if NGINX_ENABLE_SSL %}
-  rewrite ^/(.*)$ https://courses.zsmu.edu.ua/$1 permanent;
-  {% else %}
-  rewrite ^/(.*)$ http://courses.zsmu.edu.ua/$1 permanent;
-  {% endif %}
-}
-
-
-{%- if EDXAPP_ENABLE_RATE_LIMITING -%}
-# Make Zone
-limit_req_zone $cookie_{{ EDXAPP_SESSION_COOKIE_NAME }} zone=cookies:10m rate={{ EDXAPP_COURSES_REQUEST_RATE }};
-{%- endif %}
-
-
-{% if NGINX_EDXAPP_EMBARGO_CIDRS %}
-  {%- if NGINX_SET_X_FORWARDED_HEADERS %}
-geo $remote_addr $embargo {
-  {%- else %}
-geo $http_x_forwarded_for $embargo {
-  {% endif -%}
-  default 0;
-
-  {% for cidr in NGINX_EDXAPP_EMBARGO_CIDRS -%}
-  {{ cidr }} 1;
-  {% endfor %}
-
-}
-{%- endif %}
 
 server {
   # LMS configuration file for nginx, templated by ansible
 
-  {% if NGINX_EDXAPP_ENABLE_S3_MAINTENANCE %}
-
-  # Do not include a 502 error in NGINX_ERROR_PAGES when 
-  # NGINX_EDXAPP_ENABLE_MAINTENANCE is enabled.
-
-  error_page 502 @maintenance;
-
-    {% include "s3_maintenance.j2" %}
   
-  {% endif %}
-
   # error pages
-  {% for k, v in NGINX_EDXAPP_ERROR_PAGES.iteritems() %}
-error_page {{ k }} {{ v }};
-  {% endfor %}
-
-  listen {{ EDXAPP_LMS_NGINX_PORT }} {{ default_site }};
+  error_page 504 /server/server-error.html;
+  error_page 502 /server/server-error.html;
+  error_page 500 /server/server-error.html;
   
-  {% if NGINX_ENABLE_SSL %}
-  ssl on;
-  ssl_certificate        /etc/nginx/ssl/lms.crt;
-  ssl_certificate_key    /etc/nginx/ssl/lms.key;
+  listen 80 default;
 
-
-  listen {{ EDXAPP_LMS_SSL_NGINX_PORT }} {{ default_site }} ssl;
-
-  ssl_certificate /etc/ssl/certs/{{ NGINX_SSL_CERTIFICATE|basename }};
-  ssl_certificate_key /etc/ssl/private/{{ NGINX_SSL_KEY|basename }};
-  # request the browser to use SSL for all connections
-  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
-  {% endif %}
-
-  {% if NGINX_REDIRECT_TO_HTTPS %}
-  # Redirect http to https over single instance
-  if ($scheme != "https") 
-  { 
-   set $do_redirect_to_https "true";
-  }
-
-  # Nginx does not support nested conditions 
-  # Forward to HTTPS if we're an HTTP request... and the server is behind ELB 
-  if ($http_x_forwarded_proto = "http") 
-  {
-   set $do_redirect_to_https "true";
-  }
-
-  if ($do_redirect_to_https = "true")
-  {
-  rewrite ^ https://$host$request_uri? permanent;
-  }
-  {% endif %}
   
-  access_log {{ nginx_log_dir }}/access.log {{ NGINX_LOG_FORMAT_NAME }};
-  error_log {{ nginx_log_dir }}/error.log error;
+    
+  access_log /edx/var/log/nginx/access.log p_combined;
+  error_log /edx/var/log/nginx/error.log error;
 
   # CS184 requires uploads of up to 4MB for submitting screenshots.
   # CMS requires larger value for course assest, values provided
   # via hiera.
-  client_max_body_size 4M;
+  client_max_body_size 50M;
 
   rewrite ^(.*)/favicon.ico$ /static/images/favicon.ico last;
 
   location @proxy_to_lms_app {
-    {% if NGINX_SET_X_FORWARDED_HEADERS %}
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Port $server_port;
-    proxy_set_header X-Forwarded-For $remote_addr;
-    {% else %}
-    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
     proxy_set_header X-Forwarded-Port $http_x_forwarded_port;
     proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-    {% endif %}
-    proxy_set_header Host $http_host;
+        proxy_set_header Host $http_host;
 
     proxy_redirect off;
     proxy_pass http://lms-backend;
   }
 
   location / {
-    {% include "basic-auth.j2" %}
-    {% if NGINX_EDXAPP_EMBARGO_CIDRS -%}
-    if ( $embargo ) {
-      rewrite ^ /embargo;
-    }
-    {% endif -%}
-    try_files $uri @proxy_to_lms_app;
+        try_files $uri @proxy_to_lms_app;
   }
 
-{% if NGINX_EDXAPP_EMBARGO_CIDRS %}
-  location /embargo {
-    try_files $uri @proxy_to_lms_app;
-  }
-{% endif %}
 
   # No basic auth for /segmentio/event
   location /segmentio/event {
@@ -155,7 +56,7 @@ error_page {{ k }} {{ v }};
   # Need a separate location for the image uploads endpoint to limit upload sizes
   location ~ ^/api/profile_images/[^/]*/[^/]*/upload$ {
     try_files $uri @proxy_to_lms_app;
-    client_max_body_size {{ EDXAPP_PROFILE_IMAGE_MAX_BYTES + 1000 }};
+    client_max_body_size 1049576;
   }
 
   location /notifier_api {
@@ -197,23 +98,57 @@ error_page {{ k }} {{ v }};
     try_files $uri @proxy_to_lms_app;
   }
 
-  location /courses {
-    {%- if EDXAPP_ENABLE_RATE_LIMITING -%}
-    # Set Limit
-    limit_req zone=cookies burst={{ EDXAPP_COURSE_REQUEST_BURST_RATE }};
-    error_page  503 = /server/rate-limit.html;
-    {%- endif -%}
-
-    {%- include "basic-auth.j2" %}
-    try_files $uri @proxy_to_lms_app;
+  location /courses {    try_files $uri @proxy_to_lms_app;
   }
 
-location {{ EDXAPP_MEDIA_URL }} {
-    alias {{ edxapp_media_dir }}/;
-    expires {{ EDXAPP_PROFILE_IMAGE_MAX_AGE }}s;
+location /media {
+    alias /edx/var/edxapp/media/;
+    expires 31536000s;
 }
 
-  {% include "robots.j2" %}
-  {% include "static-files.j2" %}
+      # static pages for server status
+  location ~ ^/server/(?P<file>.*) {
+      root /edx/var/nginx/server-static;
+      try_files /$file =404;
+  }
+
+  location ~ ^/static/(?P<file>.*) {
+    root /edx/var/edxapp;
+    try_files /staticfiles/$file /course_static/$file =404;
+
+    # return a 403 for static files that shouldn't be
+    # in the staticfiles directory
+    location ~ ^/static/(?:.*)(?:\.xml|\.json|README.TXT) {
+        return 403;
+    }
+
+    # http://www.red-team-design.com/firefox-doesnt-allow-cross-domain-fonts-by-default
+    location ~ "/static/(?P<collected>.*\.[0-9a-f]{12}\.(eot|otf|ttf|woff|woff2)$)" {
+        expires max;
+        add_header Access-Control-Allow-Origin *;
+        try_files /staticfiles/$collected /course_static/$collected =404;
+    }
+
+    # Set django-pipelined files to maximum cache time
+    location ~ "/static/(?P<collected>.*\.[0-9a-f]{12}\..*)" {
+        expires max;
+        # Without this try_files, files that have been run through
+        # django-pipeline return 404s
+        try_files /staticfiles/$collected /course_static/$collected =404;
+    }
+
+    # Set django-pipelined files for studio to maximum cache time
+    location ~ "/static/(?P<collected>[0-9a-f]{7}/.*)" {
+        expires max;
+
+        # Without this try_files, files that have been run through
+        # django-pipeline return 404s
+        try_files /staticfiles/$collected /course_static/$collected =404;
+    }
+
+    # Expire other static files immediately (there should be very few / none of these)
+    expires epoch;
+  }
+
 
 }
