Add custom nginx maintenance template

--- a/playbooks/roles/nginx/templates/etc/nginx/nginx.conf.j2
+++ b/playbooks/roles/nginx/templates/etc/nginx/nginx.conf.j2
@@ -62,6 +62,13 @@ http {
         # Virtual Host Configs
         ##
 
+
+        geo $action {
+            default   close;
+            82.117.232.99  OPEN;
+        }
+
+
         include {{ nginx_conf_dir }}/*.conf;
         include {{ nginx_sites_enabled_dir }}/*;
 }
