update programs and credentials nginx configs

--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/credentials-multitenant-redirect.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/credentials-multitenant-redirect.j2
@@ -1,16 +1,22 @@
 upstream credentials_app_server {
-
     server {{ EDXAPP_CREDENTIALS_BASE_LOCAL }}:{{ CREDENTIALS_NGINX_PORT }} fail_timeout=0;
 }
 
 server {
   server_name {{ EDXAPP_CREDENTIALS_BASE }};
-  
-  listen {{ CREDENTIALS_NGINX_PORT }};
-  
-  {% if NGINX_ENABLE_SSL %}
 
+  {% if CREDENTIALS_NGINX_REDIRECT %}  
+  listen {{ CREDENTIALS_NGINX_REDIRECT_PORT }};
+  {% else %}
+  listen {{ CREDENTIALS_NGINX_PORT }};
+  {% endif %}
+
+  {% if NGINX_ENABLE_SSL %}
+  {% if CREDENTIALS_NGINX_REDIRECT %}
+  listen {{ CREDENTIALS_NGINX_REDIRECT_PORT }} ssl;
+  {% else %}
   listen {{ CREDENTIALS_SSL_NGINX_PORT }} ssl;
+  {% endif %}
 
   ssl_certificate /etc/ssl/certs/{{ NGINX_SSL_CERTIFICATE|basename }};
   ssl_certificate_key /etc/ssl/private/{{ NGINX_SSL_KEY|basename }};
