Use EDXAPP_LMS_SITE_NAME instead of EDXAPP_SITE_NAME as LMS site domain

--- a/playbooks/roles/add-letsencrypt-certificate/templates/cms.j2
+++ b/playbooks/roles/add-letsencrypt-certificate/templates/cms.j2
@@ -39,8 +39,8 @@ error_page {{ k }} {{ v }};
 
   listen {{ EDXAPP_CMS_SSL_NGINX_PORT }} {{ default_site }} ssl;
 
-  ssl_certificate /etc/letsencrypt/live/{{ EDXAPP_SITE_NAME }}/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/{{ EDXAPP_SITE_NAME }}/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/{{ EDXAPP_LMS_SITE_NAME }}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/{{ EDXAPP_LMS_SITE_NAME }}/privkey.pem;
   # request the browser to use SSL for all connections
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
   {% endif %}
