Update programs and credentials nginx ssl configuration with proxy_pass

--- a/playbooks/roles/credentials/templates/edx/app/nginx/sites-available/credentials.j2
+++ b/playbooks/roles/credentials/templates/edx/app/nginx/sites-available/credentials.j2
@@ -23,18 +23,28 @@ map $http_origin $cors_header {
 server {
   server_name {{ CREDENTIALS_HOSTNAME }};
 
-  {% if NGINX_ENABLE_SSL %}
+  {% if CREDENTIALS_NGINX_REDIRECT %}
+  listen {{ CREDENTIALS_NGINX_PORT }} {{ default_site }};
+  {% else %}
 
+  {% if NGINX_ENABLE_SSL %}
   listen {{ CREDENTIALS_NGINX_PORT }} {{ default_site }};
   listen {{ CREDENTIALS_SSL_NGINX_PORT }} ssl;
-
+  {% if USE_LETSENCRYPT == "yes" %}
+  ssl_certificate /etc/letsencrypt/live/{{ EDXAPP_LMS_SITE_NAME }}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/{{ EDXAPP_LMS_SITE_NAME }}/privkey.pem;
+  {% else %}
   ssl_certificate /etc/ssl/certs/{{ NGINX_SSL_CERTIFICATE|basename }};
   ssl_certificate_key /etc/ssl/private/{{ NGINX_SSL_KEY|basename }};
+  {% endif %}
+
   # request the browser to use SSL for all connections
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
 
   {% else %}
   listen {{ CREDENTIALS_NGINX_PORT }} {{ default_site }};
+  {% endif %}
+
   {% endif %}
 
   location ~ ^{{ CREDENTIALS_MEDIA_URL }}(?P<file>.*) {
