--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/credentials-multitenant-redirect.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/credentials-multitenant-redirect.j2
@@ -13,17 +13,35 @@ server {
 
   {% if NGINX_ENABLE_SSL %}
   {% if CREDENTIALS_NGINX_REDIRECT %}
-  listen {{ CREDENTIALS_NGINX_REDIRECT_PORT }} ssl;
+  listen {{ CREDENTIALS_NGINX_REDIRECT_SSL_PORT }} ssl;
   {% else %}
   listen {{ CREDENTIALS_SSL_NGINX_PORT }} ssl;
   {% endif %}
 
-  ssl_certificate /etc/ssl/certs/{{ NGINX_SSL_CERTIFICATE|basename }};
-  ssl_certificate_key /etc/ssl/private/{{ NGINX_SSL_KEY|basename }};
+  ssl_certificate /etc/letsencrypt/live/{{ EDXAPP_SITE_NAME }}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/{{ EDXAPP_SITE_NAME }}/privkey.pem;
   # Request that the browser use SSL for all connections.
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
 
+  ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
+  # Diffie-Hellman parameter for DHE ciphersuites, recommended 2048 bits
+  ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+  ssl_session_timeout  24h;
+  ssl_session_cache shared:SSL:50m;
+  ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
+  ssl_stapling on;
+  ssl_stapling_verify on;
+  ssl_prefer_server_ciphers   on;
+  ssl_trusted_certificate     /etc/ssl/certs/ca-certificates.crt;
+  resolver                8.8.8.8;
+
   {% endif %}
+
+  location '/.well-known/acme-challenge' {
+    allow all;
+    default_type "text/plain";
+    root /var/www/letsencrypt;
+  }
 
   location / {
     proxy_set_header X-Forwarded-Host $host;
