Add certbot nginx configuration.

--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/cms.j2
@@ -67,6 +67,11 @@ error_page {{ k }} {{ v }};
   
   rewrite ^(.*)/favicon.ico$ /static/images/favicon.ico last;
 
+  location '/.well-known/acme-challenge' {
+    allow all;
+    default_type "text/plain";
+    root /var/www/letsencrypt;
+  }
 
   location @proxy_to_cms_app {
 
