--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
@@ -148,6 +148,10 @@ error_page {{ k }} {{ v }};
     proxy_set_header Host $http_host;
 
     proxy_redirect off;
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
     proxy_pass http://lms-backend;
   }
 
