--- a/playbooks/roles/add-letsencrypt-certificate/templates/credentials.j2
+++ b/playbooks/roles/add-letsencrypt-certificate/templates/credentials.j2
@@ -4,7 +4,7 @@
 
 
 {% if "credentials" in nginx_default_sites %}
-  {% set default_site = "default_server" %}
+  {% set default_site = "default" %}
 {% else %}
   {% set default_site = "" %}
 {% endif %}
@@ -22,8 +22,6 @@ server {
 
   listen {{ CREDENTIALS_NGINX_PORT }} {{ default_site }};
   listen {{ CREDENTIALS_SSL_NGINX_PORT }} ssl;
-
-  {% include "common-settings.j2" %}
 
   ssl_certificate /etc/ssl/certs/{{ NGINX_SSL_CERTIFICATE|basename }};
   ssl_certificate_key /etc/ssl/private/{{ NGINX_SSL_KEY|basename }};
@@ -48,12 +46,6 @@ server {
 
   {% include "robots.j2" %}
 
-  location '/.well-known/acme-challenge' {
-    allow all;
-    default_type "text/plain";
-    root /var/www/letsencrypt;
-  }
-
 location @proxy_to_app {
     {% if NGINX_SET_X_FORWARDED_HEADERS %}
     proxy_set_header X-Forwarded-Proto $scheme;
@@ -64,10 +56,6 @@ location @proxy_to_app {
     proxy_set_header X-Forwarded-Port $http_x_forwarded_port;
     proxy_set_header X-Forwarded-For $http_x_forwarded_for;
     {% endif %}
-
-    # newrelic-specific header records the time when nginx handles a request.
-    proxy_set_header X-Queue-Start "t=${msec}";
-
     proxy_set_header Host $http_host;
 
     proxy_redirect off;
