--- a/playbooks/roles/add-letsencrypt-certificate/templates/ecommerce.j2
+++ b/playbooks/roles/add-letsencrypt-certificate/templates/ecommerce.j2
@@ -3,35 +3,35 @@
 #
 
 
-{% if "programs" in nginx_default_sites %}
-  {% set default_site = "default_server" %}
+{% if "ecommerce" in nginx_default_sites %}
+  {% set default_site = "default" %}
 {% else %}
   {% set default_site = "" %}
 {% endif %}
 
-upstream programs_app_server {
-{% for host in nginx_programs_gunicorn_hosts %}
-    server {{ host }}:{{ programs_gunicorn_port }} fail_timeout=0;
+upstream ecommerce_app_server {
+{% for host in nginx_ecommerce_gunicorn_hosts %}
+    server {{ host }}:{{ ecommerce_gunicorn_port }} fail_timeout=0;
 {% endfor %}
 }
 
 server {
-  server_name {{ PROGRAMS_HOSTNAME }};
-  
-  listen {{ PROGRAMS_NGINX_PORT }} {{ default_site }};
+  server_name {{ ECOMMERCE_HOSTNAME }};
 
-  {% include "common-settings.j2" %}
-  
+  listen {{ ECOMMERCE_NGINX_PORT }} {{ default_site }};
+
   {% if NGINX_ENABLE_SSL %}
 
-  listen {{ PROGRAMS_SSL_NGINX_PORT }} ssl;
+  listen {{ ECOMMERCE_SSL_NGINX_PORT }} ssl;
 
   ssl_certificate /etc/ssl/certs/{{ NGINX_SSL_CERTIFICATE|basename }};
   ssl_certificate_key /etc/ssl/private/{{ NGINX_SSL_KEY|basename }};
-  # Request that the browser use SSL for all connections.
+  # request the browser to use SSL for all connections
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
-
   {% endif %}
+
+  # Prevent invalid display courseware in IE 10+ with high privacy settings
+  add_header P3P '{{ NGINX_P3P_MESSAGE }}';
 
   # Nginx does not support nested condition or or conditions so
   # there is an unfortunate mix of conditonals here.
@@ -44,14 +44,12 @@ server {
   }
 
      {% elif NGINX_HTTPS_REDIRECT_STRATEGY == "forward_for_proto" %}
-
   # Forward to HTTPS if we're an HTTP request... and the server is behind ELB 
   if ($http_x_forwarded_proto = "http") 
   {
    set $do_redirect_to_https "true";
   }
      {% endif %}
-
   # Execute the actual redirect
   if ($do_redirect_to_https = "true")
   {
@@ -60,28 +58,12 @@ server {
   {% endif %}
 
   location ~ ^/static/(?P<file>.*) {
-    root {{ PROGRAMS_DATA_DIR  }};
+    root {{ COMMON_DATA_DIR }}/{{ ecommerce_service_name }};
     try_files /staticfiles/$file =404;
-
-    # Request that the browser use SSL for these connections. Repeated here
-    # because add_header directives are only inherited from the previous level
-    # if there are no add_header directives defined on the current level.
-    # See: http://nginx.org/en/docs/http/ngx_http_headers_module.html#add_header.
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
-    
-    # Instruct the browser to cache static assets for one hour.
-    add_header Cache-Control "public; max-age=3600";
-  }
-
-  location ~ ^/media/(?P<file>.*) {
-    root {{ PROGRAMS_DATA_DIR }};
-    try_files /media/$file =404;
-    # django / app always assigns new filenames so these can be cached forever.
-    add_header Cache-Control "public; max-age=31536000";
   }
 
   location / {
-    {% if PROGRAMS_ENABLE_BASIC_AUTH|bool %}
+    {% if ECOMMERCE_ENABLE_BASIC_AUTH|bool %}
       {% include "basic-auth.j2" %}
     {% endif %}
     try_files $uri @proxy_to_app;
@@ -94,12 +76,6 @@ server {
 
   {% include "robots.j2" %}
 
-  location '/.well-known/acme-challenge' {
-    allow all;
-    default_type "text/plain";
-    root /var/www/letsencrypt;
-  }
-
 location @proxy_to_app {
     {% if NGINX_SET_X_FORWARDED_HEADERS %}
     proxy_set_header X-Forwarded-Proto $scheme;
@@ -110,14 +86,11 @@ location @proxy_to_app {
     proxy_set_header X-Forwarded-Port $http_x_forwarded_port;
     proxy_set_header X-Forwarded-For $http_x_forwarded_for;
     {% endif %}
-
-    # newrelic-specific header records the time when nginx handles a request.
-    proxy_set_header X-Queue-Start "t=${msec}";
-
     proxy_set_header Host $http_host;
 
     proxy_redirect off;
-    proxy_pass http://programs_app_server;
+    proxy_pass http://ecommerce_app_server;
   }
 
 }
+
