--- a/playbooks/roles/add-letsencrypt-certificate/templates/programs.j2
+++ b/playbooks/roles/add-letsencrypt-certificate/templates/programs.j2
@@ -4,7 +4,7 @@
 
 
 {% if "programs" in nginx_default_sites %}
-  {% set default_site = "default_server" %}
+  {% set default_site = "default" %}
 {% else %}
   {% set default_site = "" %}
 {% endif %}
@@ -19,8 +19,6 @@ server {
   server_name {{ PROGRAMS_HOSTNAME }};
   
   listen {{ PROGRAMS_NGINX_PORT }} {{ default_site }};
-
-  {% include "common-settings.j2" %}
   
   {% if NGINX_ENABLE_SSL %}
 
@@ -94,12 +92,6 @@ server {
 
   {% include "robots.j2" %}
 
-  location '/.well-known/acme-challenge' {
-    allow all;
-    default_type "text/plain";
-    root /var/www/letsencrypt;
-  }
-
 location @proxy_to_app {
     {% if NGINX_SET_X_FORWARDED_HEADERS %}
     proxy_set_header X-Forwarded-Proto $scheme;
@@ -110,10 +102,6 @@ location @proxy_to_app {
     proxy_set_header X-Forwarded-Port $http_x_forwarded_port;
     proxy_set_header X-Forwarded-For $http_x_forwarded_for;
     {% endif %}
-
-    # newrelic-specific header records the time when nginx handles a request.
-    proxy_set_header X-Queue-Start "t=${msec}";
-
     proxy_set_header Host $http_host;
 
     proxy_redirect off;
